# protect-timelapse

./: .dockerignore  .gitignore  .trivyignore  CLAUDE.md  Dockerfile  entrypoint.sh  implementation-plan.md  package.json  project-design.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: cleanup.yml  main.yml
app/: __init__.py  capture.py  config.py  database.py  limiter.py  maintenance.py  notifications.py  protect.py  render.py  thumbnails.py  websocket.py
app/luts/: cinematic.cube  cool.cube  neutral.cube  warm.cube
app/routes/: cameras.py  frames.py  health.py  maintenance.py  metrics.py  notifications.py  presets.py  projects.py  renders.py  settings.py  templates.py
k8s/: deployment.yaml
static/: app.css.src  app.js
templates/: index.html
tests/: conftest.py  test_api_routes.py  test_batch_ops.py  test_cameras.py  test_capture.py  test_coverage.py  test_coverage_gaps.py  test_database.py  test_e2e.py  test_features.py  test_frames.py  test_maintenance.py  test_new_features.py  test_phase1.py  test_phase1b.py  test_phase4.py  test_projects.py  test_render_worker.py  test_resilience.py  test_scheduler.py
